compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__let_exhaustiveness4.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1473
expression: "\npub type Media {\n    Audio(BitArray)\n    Video(BitArray)\n    Text(String)\n}\npub fn main(m) {\n    let Video(_) as v = m\n    v\n}\n"
---
error: Not exhaustive pattern match
  ┌─ /src/one/two.gleam:8:5
  │
8 │     let Video(_) as v = m
  │     ^^^^^^^^^^^^^^^^^^^^^

This assignment does not match all possibilities.
Either use a case expression with patterns for each possible
value, or use `let assert` rather than `let`.

These values are not matched:

  - Audio
  - Text


